Minor edits to Project Proposal
Minor edits to proposal done by Shwetha

--- a/Project Proposal.ipynb
+++ b/Project Proposal.ipynb
@@ -80,12 +80,12 @@
     "Research existing implementations to leverage for our design.  -All<br>\n",
     "Select target to use for data sampling.  -Andrew<br>\n",
     "Create data samples.  -Andrew<br>\n",
-    "Create NN for finding scoring regions on target.<br>\n",
+    "Create NN for finding scoring regions on target.- Shwetha <br> \n",
     "Train and characterize the NN.  -Andrew<br>\n",
     "Create NN for finding hits on target.<br>\n",
     "Train and characterize the NN.  -Andrew<br>\n",
     "Create program to determine final score. -Andrew<br>\n",
-    "Create final report.<br>\n"
+    "Create final report.- Shwetha<br> \n"
    ]
   },
   {
