Added Shruti's task

--- a/Project Proposal.ipynb
+++ b/Project Proposal.ipynb
@@ -82,8 +82,8 @@
     "Create data samples.  -Andrew<br>\n",
     "Create NN for finding scoring regions on target.- Shwetha <br> \n",
     "Train and characterize the NN.  -Andrew<br>\n",
-    "Create NN for finding hits on target.<br>\n",
-    "Train and characterize the NN.  -Andrew<br>\n",
+    "Create NN for finding hits on target. -Shruti<br>\n",
+    "Train and characterize the NN.  -Shruti<br>\n",
     "Create program to determine final score. -Andrew<br>\n",
     "Create final report.- Shwetha<br> \n"
    ]
